# melodity-beats-chain

./: Cargo.toml  chain-conf.json  chain-conf.new.json  chain-conf.raw.json  how_to_chain_conf  node-run.txt  ss58-registry.json  test.json  types.json
client/frontier-consensus/: Cargo.toml
client/frontier-db/: Cargo.toml
client/mapping-sync/: Cargo.toml
client/rpc/: Cargo.toml
client/rpc-api/: Cargo.toml
client/rpc-api/src/: lib.rs  metadata.rs
client/rpc/src/: eth.rs  eth_pubsub.rs  lib.rs
client/service/: Cargo.toml
client/service/src/: lib.rs
frame/assets/src/: lib.rs
frame/atomic-swap/src/: tests.rs
frame/balances/src/: lib.rs  tests_composite.rs  tests_local.rs
frame/bounties/src/: tests.rs
frame/contracts/src/: tests.rs
frame/democracy/src/: tests.rs
frame/dynamic-fee/: Cargo.toml
frame/elections-phragmen/src/: lib.rs
frame/elections/src/: mock.rs
frame/ethereum/: Cargo.toml
frame/evm/: Cargo.toml
frame/evm/precompile/blake2/: Cargo.toml
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/curve25519/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/ed25519/: Cargo.toml
frame/evm/precompile/modexp/: Cargo.toml
frame/evm/precompile/sha3fips/: Cargo.toml
frame/evm/precompile/simple/: Cargo.toml
frame/evm/src/: mock.rs
frame/example/src/: lib.rs
frame/executive/src/: lib.rs
frame/identity/src/: tests.rs
frame/indices/src/: mock.rs
frame/lottery/src/: mock.rs
frame/melodity-airdrop/: Cargo.toml
frame/melodity-airdrop/src/: lib.rs
frame/melodity-bridge/: Cargo.toml
frame/melodity-bridge/src/: lib.rs
frame/melodity-nft/: Cargo.toml
frame/melodity-nft/src/: lib.rs
frame/melodity-track-election/: Cargo.toml
frame/melodity-track-election/src/: lib.rs
frame/multisig/src/: tests.rs
frame/nicks/src/: lib.rs
frame/offences/benchmarking/src/: mock.rs
frame/proxy/src/: tests.rs
frame/scored-pool/src/: mock.rs
frame/session/benchmarking/src/: mock.rs
frame/society/src/: mock.rs
frame/staking/fuzzer/src/: mock.rs
frame/support/src/: event.rs  metadata.rs  traits.rs  weights.rs
frame/support/src/traits/tokens/: currency.rs
frame/support/test/tests/: pallet.rs  pallet_compatibility.rs  pallet_compatibility_instance.rs  pallet_instance.rs  pallet_with_name_trait_is_valid.rs
frame/tips/src/: tests.rs
frame/transaction-payment/src/: lib.rs
frame/treasury/src/: tests.rs
frame/utility/src/: tests.rs
frame/vesting/src/: lib.rs
primitives/arithmetic/: Cargo.toml
primitives/arithmetic/src/: traits.rs
primitives/core/src/: crypto.rs
primitives/election-providers/src/: lib.rs
primitives/evm/: Cargo.toml
primitives/frontier-consensus/: Cargo.toml
primitives/frontier-rpc/: Cargo.toml
primitives/runtime/src/: lib.rs  traits.rs
