[package]
name = "fc-db"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier database backend"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
sp-core = { version = "3.0.0", path = "../../primitives/core" }
sp-database = { version = "3.0.0", path = "../../primitives/database" }
sp-runtime = { version = "3.0.0", path = "../../primitives/runtime" }
pallet-ethereum = { version = "3.0.0-dev", path = "../../frame/ethereum" }
fp-storage = { version = "2.0.0-dev", path = "../../primitives/frontier-storage"}
kvdb = "0.9.0"
kvdb-rocksdb = "0.11.0"
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
parking_lot = "0.11.1"
