[package]
name = "fc-mapping-sync"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Mapping sync logic for Frontier."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
sp-runtime = { version = "3.0.0", path = "../../primitives/runtime" }
sp-blockchain = { version = "3.0.0", path = "../../primitives/blockchain"}
sc-client-api = { version = "3.0.0", path = "../api" }
sp-api = { version = "3.0.0", path = "../../primitives/api" }
fp-consensus = { version = "1.0.0", path = "../../primitives/frontier-consensus" }
fc-consensus = { version = "2.0.0-dev", path = "../frontier-consensus" }
fc-db = { version = "2.0.0-dev", path = "../frontier-db" }
fp-rpc = { version = "2.0.0-dev", path = "../../primitives/rpc" }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.1"
log = "0.4.8"
