[package]
name = "pallet-dynamic-fee"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Dynamic fee handling for EVM."
license = "Apache-2.0"

[dependencies]
pallet-evm = { path = "../evm", version = "5.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
sp-inherents = { version = "3.0.0", default-features = false, path = "../../primitives/inherents" }
frame-system = { version = "3.0.0", default-features = false, path = "../system" }
frame-support = { version = "3.0.0", default-features = false, path = "../support" }

[dev-dependencies]
pallet-timestamp = { version = "3.0.0", default-features = false, path = "../timestamp" }
sp-io = { version = "3.0.0", default-features = false, path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-inherents/std",
	"frame-system/std",
	"frame-support/std",
	"pallet-evm/std",
]
