[package]
name = "melodity-airdrop"
description = "Melodity airdrop creator"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/nft"
license = "Apache-2.0"
version = "1.0.0"
authors = ["ebalo"]
edition = "2018"

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.119' }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
pallet-balances = { version = "3.0.0", default-features = false, path = "../balances" }

frame-support = { version = "3.0.0", default-features = false, path = "../../frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../frame/system" }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

[dev-dependencies]
sp-io = { version = "3.0.0", path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
disable-tokens-by-owner = []
