[package]
name = "melodity-nft"
description = "Non-fungible token pallet modifierd to provide extensive functions to create and manage NFTs"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/nft"
license = "Apache-2.0"
version = "1.0.0"
authors = ["Acala Developers (original code)", "ebalo"]
edition = "2018"

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.119' }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-core = { version = "4.1.0-dev", default-features = false, path = "../../primitives/core" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }

frame-support = { version = "4.0.0-dev", default-features = false, path = "../../frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../frame/system" }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

[dev-dependencies]
sp-io = { version = "4.0.0-dev", path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	"serde",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
disable-tokens-by-owner = []
